syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.rkd.auto.grpc";
option java_outer_classname = "VehicleServiceProto";

package vehicleservice;

service VehicleService {
  rpc SendEvent (VehicleRequest) returns (EmptyResponse);
}

message VehicleRequest {
  string license_plate = 1;
  string event_type = 2;
  string entry_time = 3;
  string exit_time = 4;
  double lat = 5;
  double lng = 6;
}

message EmptyResponse {}
